# testgame-c

./: .clangd  .gitignore  CMakeLists.txt  README.md
assets/: enemy.aseprite  enemy.img  explo.img  explo.pal  explosion.aseprite  heros.aseprite  heros.img  heros.imp  heros.pal  plane.img  shot.aseprite  shot.img  shot.pal
src/: collision.c  collision.h  debug.c  debug.h  enemy.c  enemy.h  game_objects.c  game_objects.h  globals.c  globals.h  irq.h  irq.s  joystick.c  joystick.h  main.c  music.c  music.h  ship.c  ship.h  ship_control.c  ship_control.h  shot.c  shot.h  sound.c  sound.h  sprite_load.c  sprite_load.h  sprite_update.c  sprite_update.h  sprites.h
zsmkit/: CMakeLists.txt  link.ld  zsmkit.c  zsmkit.h
